--- a/css/calculator.css
+++ b/css/calculator.css
@@ -1,7 +1,20 @@
+.body-overlay {
+  display: none;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  cursor: pointer;
+  z-index: 1;
+}
+
 .calculator-container {
+  position: relative;
   width: 356px;
   background: var(--background);
   border-radius: 8px;
+  overflow: hidden;
 }
 
 .calculator-container > p {
@@ -11,27 +24,32 @@
   color: #7B6A6A;
 }
 
-header, header div, header button {
+header, header button {
   display: flex;
   align-items: center;
 }
 
 header {
+  margin-left: calc(45px + 7px);
+  height: 45px;
   justify-content: space-between;
 }
 
 header button {
   justify-content: center;
-  transition: background-color 0s, box-shadow 0s;
 }
-header button:hover {
+.menu:hover, .history:hover {
   background-color: rgba(0, 0, 0, .05);
   box-shadow: inset 0 0 1px 1px rgba(0, 0, 0, .1);
 }
  
-header .menu {
+.menu {
+  position: absolute;
+  top: 32px;
+  left: 0;
   width: 45px;
   height: 45px;
+  z-index: 3;
 }
 header .history {
   width: 40px;
@@ -42,7 +60,6 @@ header h1 {
   font-size: 1.125rem;
   font-weight: 600;
   color: var(--black);
-  margin-left: 7px;
 }
 
 .equation {
