--- a/css/calculator.css
+++ b/css/calculator.css
@@ -38,7 +38,7 @@ header {
 header button {
   justify-content: center;
 }
-.menu:hover, .history:hover {
+header button:hover, .clear-saves:hover {
   background-color: rgba(0, 0, 0, .05);
   box-shadow: inset 0 0 1px 1px rgba(0, 0, 0, .1);
 }
@@ -75,7 +75,6 @@ header h1 {
 .equation output {
   display: block;
   height: 55px;
-  font-family: 'Poppins', sans-serif;
   font-size: 2.25rem;
   font-weight: 500;
   color: var(--black);
