Add calculator overlay

--- a/css/calculator.css
+++ b/css/calculator.css
@@ -17,6 +17,19 @@
   overflow: hidden;
 }
 
+.calculator-overlay {
+  display: none;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(16, 16, 16, .35);
+  border-radius: 8px;
+  cursor: pointer;
+  z-index: 4;
+}
+
 .calculator-container > p {
   margin: 8px 15px;
   font-weight: 400;
