Style calculator history

--- a/css/global.css
+++ b/css/global.css
@@ -34,7 +34,7 @@ ul {
   color: var(--white);
 }
 
-body, button, h1, span {
+body, button, pre {
   font-family: 'Open Sans', sans-serif;
 }
 output {
