--- a/css/global.css
+++ b/css/global.css
@@ -34,6 +34,19 @@ ul {
   color: var(--white);
 }
 
+.thin-scroll::-webkit-scrollbar {
+  width: 6px;
+}
+.thin-scroll::-webkit-scrollbar-track {
+  background-color: transparent;
+}
+.thin-scroll::-webkit-scrollbar-thumb {
+  background-color: #7a7a7a;
+  background-clip: content-box;
+  border: 2px solid transparent;
+  border-radius: 3.5px;
+}
+
 body, button, pre {
   font-family: 'Open Sans', sans-serif;
 }
@@ -54,4 +67,12 @@ button {
 }
 button:disabled {
   cursor: default;
+}
+
+.scrollbar-measure {
+	width: 100px;
+	height: 100px;
+	overflow: scroll;
+	position: absolute;
+	top: -9999px;
 }
