--- a/css/memory.css
+++ b/css/memory.css
@@ -18,6 +18,7 @@
   height: 28px;
 }
 .memory .saves-container li:hover .memory-actions {
+  position: relative;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 2px;
@@ -32,4 +33,29 @@
 .memory-actions button:hover {
   color: #ffffff;
   background-color: var(--keyboard-text);
+}
+
+.memory-actions .tooltip {
+  opacity: 0;
+  position: absolute;
+  bottom: calc(100% + 16px);
+  padding: 6px 8px;
+  font-family: 'Poppins', sans-serif;
+  font-size: 11px;
+  font-weight: 400;
+  white-space: nowrap;
+  color: var(--black);
+  background-color: #E0E0E0;
+  box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.45);
+  border-radius: 5px;
+}
+
+/* centralize */
+.memory-actions .tooltip.action-0 {left: -44px;}
+.memory-actions .tooltip.action-1 {left: -9px;}
+.memory-actions .tooltip.action-2 {right: -9px;}
+
+.memory-actions button:hover + .tooltip {
+  opacity: 1;
+  transition: opacity .1s linear 1.2s;
 }
