--- a/css/calculator.css
+++ b/css/calculator.css
@@ -56,7 +56,7 @@ header button:hover, .clear-saves:hover {
   box-shadow: inset 0 0 1px 1px rgba(0, 0, 0, .1);
 }
  
-.menu {
+header .menu {
   position: absolute;
   top: 32px;
   left: 0;
@@ -164,11 +164,13 @@ header h1 {
 .memory-row button:not(:disabled):hover {
   background-color: rgba(0, 0, 0, .05);
 }
-.calculator-container .keyboard button:not(:disabled):hover {
+.keyboard button:not(:disabled):hover,
+.keyboard-hover:not(:disabled) {
   filter: brightness(.8);
 }
 .memory-row button:not(:disabled):hover,
-.calculator-container .keyboard button:not(:disabled):hover {
+.keyboard button:not(:disabled):hover,
+.keyboard-hover:not(:disabled) {
   box-shadow:
     inset 0 0 1px 1px rgba(0, 0, 0, .15),
     inset 0 0 10px 1px rgba(0, 0, 0, .025);
