--- a/css/memory.css
+++ b/css/memory.css
@@ -1,28 +1,28 @@
-.memory .saves-container ul li {
-  padding: 6px 15px 4px;
-}
-
 .memory .saves-container li + li {
   margin-top: 15px;
 }
 
 .memory .saves-container li output {
+  position: absolute;
+  top: 6px;
+  right: 15px;
   font-size: 20px;
   font-weight: 500;
   color: var(--black);
 }
 
 .memory .saves-container li .memory-actions {
+  position: absolute;
+  bottom: 4px;
+  right: 15px;
   display: none;
   width: 112px;
   height: 28px;
 }
 .memory .saves-container li:hover .memory-actions {
-  position: relative;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 2px;
-  z-index: 1;
 }
 
 .memory-actions button {
@@ -31,8 +31,8 @@
   color: var(--keyboard-text);
   background-color: #ffffff;
 }
-  .memory-actions button:hover,
-  .memory-actions button:focus {
+.memory-actions button:hover,
+.memory-actions button:focus {
   color: #ffffff;
   background-color: var(--keyboard-text);
 }
@@ -66,8 +66,7 @@
 @keyframes deleting-element {
   to {
     margin: 0;
-    height: 0;
-    padding: 0;
+    min-height: 0;
   }
 }
 
