Allow text selection for output and pre

--- a/css/global.css
+++ b/css/global.css
@@ -10,6 +10,13 @@
   user-select: none;
 }
 
+output, pre {
+  cursor: text;
+  -moz-user-select: text;
+  -ms-user-select: text;
+  user-select: text;
+}
+
 ul {
   list-style: none;
 }
