--- a/css/calculator.css
+++ b/css/calculator.css
@@ -85,12 +85,17 @@ header h1 {
   font-weight: 300;
   color: var(--keyboard-text);
 }
-.equation output {
+.equation output, .output-measure {
   display: block;
   height: 55px;
   font-size: 2.25rem;
   font-weight: 500;
   color: var(--black);
+  white-space: nowrap;
+}
+.output-measure {
+  position: absolute;
+	top: -9999px;
 }
 
 .memory-row {
