--- a/css/bottom-card.css
+++ b/css/bottom-card.css
@@ -1,12 +1,12 @@
 .bottom-card {
   display: none;
   position: absolute;
-  top: calc(100% + 345px);
+  top: calc(100% + 21.5rem);
   left: 0;
   width: 100%;
-  height: 345px;
+  height: 21.5rem;
   background-color: #d7d7d7;
-  border-radius: 0 0 8px 8px;
+  border-radius: 0 0 0.5rem 0.5rem;
   z-index: 5;
   animation: open-bottom-card .25s ease forwards paused;
 }
@@ -22,25 +22,25 @@
 }
 
 .bottom-card p {
-  margin: 18px;
-  font-size: 14px;
+  margin: 1.125rem;
+  font-size: 0.875rem;
   color: #000000
 }
 
 .bottom-card .saves-container {
-  height: 290px;
+  height: 18rem;
   width: 100%;
   overflow-y: overlay;
   scroll-behavior: smooth;
 }
 
 .saves-container ul {
-  padding: 20px 0;
+  padding: 1.25rem 0;
 }
 
 .saves-container ul li {
   position: relative;
-  min-height: 70px;
+  min-height: 4.365rem;
   width: 100%;
   text-align: end;
   cursor: pointer;
@@ -67,25 +67,25 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 50px;
-  height: 50px;
-  border-radius: 0 0 8px 0;
+  width: 3.125rem;
+  height: 3.125rem;
+  border-radius: 0 0 0.5rem 0;
 }
 
 @keyframes open-bottom-card {
   from {
-    top: calc(100% + 345px);
+    top: calc(100% + 21.5rem);
   }
   to {
-    top: calc(100% - 345px);
+    top: calc(100% - 21.5rem);
   }
 }
 
 @keyframes close-bottom-card {
   from {
-    top: calc(100% - 345px);
+    top: calc(100% - 21.5rem);
   }
   to {
-    top: calc(100% + 345px);
+    top: calc(100% + 21.5rem);
   }
 }
