--- a/css/history.css
+++ b/css/history.css
@@ -1,16 +1,16 @@
 .history .saves-container ul li {
-  padding: 7px 15px 2px 5px;
+  padding: 0.5rem 1rem 0.125rem 0.3125rem;
 }
 
 .history .saves-container li + li {
-  margin-top: 30px;
+  margin-top: 1.875rem;
 }
 
 .history .saves-container li pre {
   position: relative;
   display: inline-block;
-  margin-bottom: 6px;
-  font-size: 14px;
+  margin-bottom: 0.375rem;
+  font-size: 0.875rem;
   font-weight: 300;
   white-space: pre-wrap;
   word-break: break-all;
@@ -19,6 +19,6 @@
 
 .history .saves-container li output {
   position: relative;
-  font-size: 24px;
+  font-size: 1.5rem;
   font-weight: 500;
 }
