--- a/css/memory.css
+++ b/css/memory.css
@@ -1,32 +1,32 @@
 .memory .saves-container li + li {
-  margin-top: 15px;
+  margin-top: 1rem;
 }
 
 .memory .saves-container li output {
   position: absolute;
-  top: 6px;
-  right: 15px;
-  font-size: 20px;
+  top: 0.375rem;
+  right: 1rem;
+  font-size: 1.25rem;
   font-weight: 500;
   color: var(--black);
 }
 
 .memory .saves-container li .memory-actions {
   position: absolute;
-  bottom: 4px;
-  right: 15px;
+  bottom: 0.25rem;
+  right: 1rem;
   display: none;
-  width: 112px;
-  height: 28px;
+  width: 7rem;
+  height: 1.75rem;
 }
 .memory .saves-container li:hover .memory-actions {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  gap: 2px;
+  gap: 0.125rem;
 }
 
 .memory-actions button {
-  font-size: 12px;
+  font-size: 0.75rem;
   font-weight: 700;
   color: var(--keyboard-text);
   background-color: #ffffff;
@@ -41,22 +41,22 @@
   display: none;
   opacity: 0;
   position: absolute;
-  bottom: calc(100% + 16px);
-  padding: 6px 8px;
+  bottom: calc(100% + 1rem);
+  padding: 0.375rem 0.5rem;
   font-family: 'Poppins', sans-serif;
-  font-size: 11px;
+  font-size: 0.6875rem;
   font-weight: 400;
   white-space: nowrap;
   color: var(--black);
   background-color: #E0E0E0;
   box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.45);
-  border-radius: 5px;
+  border-radius: 0.3125rem;
 }
 
 /* centralize */
-.memory-actions .tooltip.action-0 {left: -44px;}
-.memory-actions .tooltip.action-1 {left: -9px;}
-.memory-actions .tooltip.action-2 {right: -9px;}
+.memory-actions .tooltip.action-0 {left: -2.75rem;}
+.memory-actions .tooltip.action-1 {left: -0.5625rem;}
+.memory-actions .tooltip.action-2 {right: -0.5625rem;}
 
 .memory-actions button:hover + .tooltip {
   opacity: 1;
