--- a/css/menu-card.css
+++ b/css/menu-card.css
@@ -1,14 +1,13 @@
 .menu-card {
   display: none;
   position: absolute;
-  top: 32px;
+  top: 2rem;
   left: -500px;
   width: 255px;
-  height: calc(100% - 32px);
-  padding-top: calc(45px + 12px);
+  height: calc(100% - 2rem);
+  padding-top: calc(2.8rem + 0.75rem);
   background-color: #E2E2E2;
-  border-radius: 0 0 0 8px;
-  border-bottom-left-radius: 8px;
+  border-radius: 0 0 0 0.5rem;
   box-shadow: 0px 0px 5px 1px rgba(0, 0, 0, 0.3);
   z-index: 2;
   animation: open-menu .25s ease forwards paused;
@@ -17,16 +16,9 @@
   animation: close-menu .25s ease forwards paused;
 }
 
-.menu-card .menu {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin-bottom: 12px;
-}
-
 section h1 {
   margin-left: 14px;
-  font-size: 14px;
+  font-size: 0.875rem;
   font-weight: 600;
   color: var(--black);
 }
@@ -36,7 +28,7 @@ section .unavailable {
 }
 
 section ul {
-  margin: 10px 0;
+  margin: 0.625rem 0;
 }
 
 section ul li button,
@@ -45,9 +37,9 @@ section ul li .unavailable {
   display: flex;
   align-items: center;
   width: 100%;
-  height: 36px;
-  padding: 8px 18px;
-  font-size: 13px;
+  height: 2.25rem;
+  padding: 0.5rem 1.125rem;
+  font-size: 0.8125rem;
   font-weight: 400;
 }
 section ul li button:hover {
@@ -57,15 +49,15 @@ section ul li button:hover {
 section ul li button.current-mode::before {
   content: '';
   position: absolute;
-  top: 6px;
-  left: 8px;
-  height: 24px;
+  top: 0.375rem;
+  left: 0.5rem;
+  height: 1.5rem;
   border: 1px solid var(--black);
 }
 
 section ul li button img,
 section ul li .unavailable img {
-  margin-right: 10px;
+  margin-right: 0.625rem;
 }
 
 @keyframes open-menu {
